Fixed twitter feed so that it's aligned with the header. Changed the main header so that it's not in all caps.

--- a/website/static/website/css/landing.css
+++ b/website/static/website/css/landing.css
@@ -11,3 +11,9 @@
     width: 100%;
     text-align: center;
 }
+
+
+h1{
+    text-transform: none;
+    font-variant: normal;
+}
